# oss-client-rs

./: Cargo.toml  README-zh.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
config/: Cargo.toml
config/src/: config.rs
s3/: Cargo.toml
s3/src/: s3.rs
src/: config.rs  configure.rs  main.rs  s3.rs  utils.rs
