[package]
name = "s3-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = {version = "0.18.0"}
clap = {version = "3.2.20"}
configparser = {version = "3.0.2"}
home = "0.5.3"
tokio = {version = "1.21.0", features = ["full"]}
