[package]
name = "oss-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.0", features = ["full"]}
clap = {version = "3.2.20" }
oss-client-rs-conf = {path= "../config"}
oss-client-rs-s3 = {path="../s3"}