[package]
name = "oss-client-rs-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.0", features = ["full"]}
aws-sdk-s3 = {version = "0.18.0"}
home = "0.5.3"
aws-smithy-http = {version = "0.48.0"}
aws-smithy-types = {version = "0.48.0"}
walkdir = {version = "2.3.2"}
futures = "0.3.24"
oss-client-rs-conf = {path= "../config"}
